--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "@azure/msal-browser": "^4.2.0",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
     "core-js": "^3.36.0",
     "regenerator-runtime": "^0.14.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@babel/preset-env": "^7.25.4",
-    "@types/office-js": "^1.0.377",
+    "@types/office-js-preview": "^1.0.555",
     "@types/office-runtime": "^1.0.35",
     "acorn": "^8.11.3",
     "babel-loader": "^9.1.3",
