--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@azure/msal-browser": "^4.2.0",
     "@microsoft/microsoft-graph-client": "^3.0.7",
+    "@yaireo/tagify": "^4.33.2",
     "core-js": "^3.36.0",
     "regenerator-runtime": "^0.14.1"
   },
