--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "signin": "office-addin-dev-settings m365-account login",
     "signout": "office-addin-dev-settings m365-account logout",
     "start": "office-addin-debugging start manifest.xml",
+    "start-dev": "office-addin-debugging start manifest-dev.xml",
+    "start-prod": "office-addin-debugging start manifest-prod.xml",
     "stop": "office-addin-debugging stop manifest.xml",
     "validate": "office-addin-manifest validate manifest.xml",
     "watch": "webpack --mode development --watch",
